--- a/src/KioskClient/MainPage.xaml
+++ b/src/KioskClient/MainPage.xaml
@@ -18,7 +18,7 @@
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Base.xaml" />
+                <ResourceDictionary Source="Resources/KioskClientLogo.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
