--- a/src/KioskClient/App.xaml
+++ b/src/KioskClient/App.xaml
@@ -10,16 +10,20 @@
     x:Class="KioskLibrary.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:KioskLibrary.Converters"
     xmlns:local="using:KioskLibrary">
 
     <Application.Resources>
         <ResourceDictionary>
+            <converters:InvertBooleanConverter x:Key="InvertBoolean" />
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+                <ResourceDictionary Source="/Resources/KioskClientLogo.xaml" />
+                <ResourceDictionary Source="/Resources/CityOfStantonTechnology.xaml" />
+                <ResourceDictionary Source="/Resources/GreenControls.xaml" />
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
         </ResourceDictionary>
     </Application.Resources>
-
 </Application>
