--- a/src/KioskClient/Pages/About.xaml
+++ b/src/KioskClient/Pages/About.xaml
@@ -15,20 +15,12 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     x:Name="ContentDialog_About"
-    Title="About"
-    PrimaryButtonText="Close"
-    DefaultButton="Primary">
-    <ContentDialog.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resources/KioskClientLogo.xaml" />
-                <ResourceDictionary Source="../Resources/CityOfStantonTechnology.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </ContentDialog.Resources>
+    KeyUp="ContentDialog_About_KeyUp"
+    Title="About">
     
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
@@ -48,8 +40,9 @@
             </StackPanel>
             <TextBlock Text="Copyright (c) 2021. City of Stanton. All Rights Reserved." Style="{ThemeResource SubtitleTextBlockStyle}" TextWrapping="Wrap" Width="275" Margin="0,10"/>
             <TextBlock Text="Disclaimer: This code and information is provided 'as is' without warranty of any kind, either expressed or implied, including but not limited to the implied warranties of merchantability and/or fitness for a particular purpose." TextWrapping="Wrap" Width="275" Margin="0,10"/>
-            <HyperlinkButton x:Name="Button_GitHub" Content="Kiosk Client GitHub" NavigateUri="https://github.com/CityOfStanton/Kiosk-Client" />
-            <HyperlinkButton x:Name="Button_Homepage" Content="City of Stanton Technology" NavigateUri="https://www.stantonky.gov/technology" />
+            <HyperlinkButton x:Name="Button_GitHub" Content="Kiosk Client GitHub" NavigateUri="https://github.com/CityOfStanton/Kiosk-Client" Style="{StaticResource GreenHyperlinkButton}" />
+            <HyperlinkButton x:Name="Button_Homepage" Content="City of Stanton Technology" NavigateUri="https://www.stantonky.gov/technology" Style="{StaticResource GreenHyperlinkButton}"/>
         </StackPanel>
+        <Button Grid.Row="2" Grid.Column="1" x:Name="Button_Close" Content="Close" Style="{StaticResource GreenButton}" Width="200" HorizontalAlignment="Right" Margin="0,30,0,0" Click="Button_Close_Click" />
     </Grid>
 </ContentDialog>
