--- a/src/KioskClient/Pages/Settings.xaml
+++ b/src/KioskClient/Pages/Settings.xaml
@@ -10,22 +10,11 @@
     x:Class="KioskLibrary.Pages.Settings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KioskLibrary"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:local1="using:KioskLibrary.Converters"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    <Page.Resources>
-        <ResourceDictionary>
-            <local1:InvertBooleanConverter x:Key="InvertBoolean" />
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resources/KioskClientLogo.xaml" />
-                <ResourceDictionary Source="../Resources/CityOfStantonTechnology.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Page.Resources>
 
     <Grid x:Name="mainGrid">
         <Grid.RowDefinitions>
@@ -50,10 +39,7 @@
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" >
                     <TextBlock Text="Ready to get started? Check out the Wiki:" TextWrapping="WrapWholeWords" VerticalAlignment="Center" TextTrimming="WordEllipsis" Style="{ThemeResource SubtitleTextBlockStyle}" />
-
-                    <!--<HyperlinkButton x:Name="Button_GitHub" Content="Kiosk Client GitHub" Margin="20,0" NavigateUri="https://github.com/CityOfStanton/Kiosk-Client" />-->
-                    <HyperlinkButton x:Name="Button_Wiki" Content="Kiosk Client Wiki" Margin="20,0" NavigateUri="https://github.com/CityOfStanton/Kiosk-Client/wiki" />
-                    <!--<HyperlinkButton x:Name="Button_Homepage" Content="City of Stanton Technology" Margin="20,0" NavigateUri="https://www.stantonky.gov/technology" />-->
+                    <HyperlinkButton x:Name="Button_Wiki" Content="Kiosk Client Wiki" Margin="20,0" NavigateUri="https://github.com/CityOfStanton/Kiosk-Client/wiki" Style="{StaticResource GreenHyperlinkButton}" />
                 </StackPanel>
 
                 <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,20">
@@ -71,7 +57,7 @@
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <ToggleSwitch x:Name="ToggleSwitch_InputMode" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Header="Input Mode" OnContent="File" OffContent="URL" HorizontalAlignment="Center" IsOn="{x:Bind Path=State.IsLocalFile, Mode=TwoWay}" VerticalAlignment="Center" />
+                    <ToggleSwitch OnContentTemplate="{StaticResource GreenToggleSwitchOnContentTemplate}" x:Name="ToggleSwitch_InputMode" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Header="Input Mode" OnContent="File" OffContent="URL" HorizontalAlignment="Center" VerticalAlignment="Center" IsOn="{x:Bind Path=State.IsLocalFile, Mode=TwoWay}" />
                     <Grid Grid.Row="0" Grid.Column="1" VerticalAlignment="Center">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -128,6 +114,12 @@
                             <MenuFlyoutItem x:Name="ListBox_Log_Copy" Text="Copy" Click="ListBox_Log_Copy_Click" >
                                 <MenuFlyoutItem.Icon>
                                     <SymbolIcon Symbol="Copy"/>
+                                </MenuFlyoutItem.Icon>
+                            </MenuFlyoutItem>
+                            <MenuFlyoutSeparator />
+                            <MenuFlyoutItem x:Name="ListBox_Log_Save" Text="Save" Click="ListBox_Log_Save_Click" >
+                                <MenuFlyoutItem.Icon>
+                                    <SymbolIcon Symbol="Save"/>
                                 </MenuFlyoutItem.Icon>
                             </MenuFlyoutItem>
                             <MenuFlyoutSeparator />
