--- a/src/KioskClient/Pages/Settings.xaml
+++ b/src/KioskClient/Pages/Settings.xaml
@@ -17,7 +17,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Page.Resources>
         <ResourceDictionary>
-            <SolidColorBrush x:Key="ToggleSwitchFillOn" Color="#277C31" />
+            <SolidColorBrush x:Key="ToggleSwitchFillOn" Color="#267B30" />
             <SolidColorBrush x:Key="ToggleSwitchFillOnPressed" Color="#1A5120" />
             <SolidColorBrush x:Key="ToggleSwitchFillOnPointerOver" Color="#3DBF4A" />
         </ResourceDictionary>
@@ -181,7 +181,7 @@
                         </StackPanel>
                     </Button.Content>
                     <Button.Background>
-                        <SolidColorBrush Color="#277C31" />
+                        <SolidColorBrush Color="#267B30" />
                     </Button.Background>
                 </Button>
             </StackPanel>
