--- a/src/KioskClient/App.xaml
+++ b/src/KioskClient/App.xaml
@@ -16,9 +16,11 @@
     <Application.Resources>
         <ResourceDictionary>
             <converters:InvertBooleanConverter x:Key="InvertBoolean" />
+            <FontFamily x:Key="KioskClientFonts">/Resources/KioskClient.ttf#KioskClient</FontFamily>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <ResourceDictionary Source="/Resources/KioskClientLogo.xaml" />
+                <ResourceDictionary Source="/Resources/BadgeLogo.xaml" />
                 <ResourceDictionary Source="/Resources/CityOfStantonTechnology.xaml" />
                 <ResourceDictionary Source="/Resources/GreenControls.xaml" />
             </ResourceDictionary.MergedDictionaries>
