--- a/src/KioskClient/Dialogs/About.xaml
+++ b/src/KioskClient/Dialogs/About.xaml
@@ -7,10 +7,10 @@
 -->
     
 <ContentDialog
-    x:Class="KioskClient.Pages.About"
+    x:Class="KioskClient.Dialogs.About"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KioskClient.Pages"
+    xmlns:local="using:KioskClient.Dialogs"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
