--- a/src/KioskClient/Pages/Settings.xaml
+++ b/src/KioskClient/Pages/Settings.xaml
@@ -22,9 +22,9 @@
             <SolidColorBrush x:Key="ToggleSwitchFillOnPointerOver" Color="#3DBF4A" />
         </ResourceDictionary>
     </Page.Resources>
-    <muxc:NavigationView x:Name="NavigationView_Menu" IsSettingsVisible="False" PaneDisplayMode="LeftCompact"  ItemInvoked="NavigationView_Menu_ItemInvoked" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+    <muxc:NavigationView x:Name="NavigationView_Menu" IsSettingsVisible="False" PaneDisplayMode="LeftCompact" ItemInvoked="NavigationView_Menu_ItemInvoked" ScrollViewer.VerticalScrollBarVisibility="Disabled">
         <muxc:NavigationView.MenuItems>
-            <muxc:NavigationViewItem x:Name="NavigationViewItem_Start" Icon="Play" Content="Start the Orchestration" Tag="Start" IsEnabled="{x:Bind Path=State.CanStart, Mode=OneWay}" Background="#267B30" />
+            <muxc:NavigationViewItem x:Name="NavigationViewItem_Start" Icon="Play" Content="Run the Orchestration" Tag="Run" IsEnabled="{x:Bind Path=State.CanStart, Mode=OneWay}" Background="#267B30" KeyboardAcceleratorPlacementMode="Auto" />
             <muxc:NavigationViewItem x:Name="NavigationViewItem_Save" Icon="SaveLocal" Content="Save as startup Orchestration" Tag="Save" IsEnabled="{x:Bind Path=State.CanStart, Mode=OneWay}" />
             <muxc:NavigationViewItem x:Name="NavigationViewItem_Clear" Icon="Clear" Content="Clear startup  Orchestration" Tag="Clear" />
         </muxc:NavigationView.MenuItems>
@@ -225,8 +225,8 @@
             <muxc:TeachingTip x:Name="TeachTip_Start"
 	        Target="{x:Bind NavigationViewItem_Start}"
             IsLightDismissEnabled="true"
-	        Title="Start your Orchestration!"
-	        Subtitle="You can click the Start button to start immediately. This also saves your Orchestration as the startup Orchestration."
+	        Title="Run your Orchestration!"
+	        Subtitle="You can click the Run button to run immediately. This also saves your Orchestration as the startup Orchestration."
             Closed="TeachTip_Closed">
                 <muxc:TeachingTip.IconSource>
                     <muxc:SymbolIconSource Symbol="Play" />
