--- a/src/KioskClient/App.xaml
+++ b/src/KioskClient/App.xaml
@@ -18,6 +18,10 @@
             <converters:InvertBooleanConverter x:Key="InvertBoolean" />
             <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
             <converters:BooleanToInvertedVisibilityConverter x:Key="BooleanToInvertedVisibility" />
+            <converters:BooleanToSymbolConverter x:Key="BooleanToSymbol" />
+            <converters:BooleanToColorConverter x:Key="BooleanToColor" />
+            <converters:NullToVisibilityConverter x:Key="NullToVisibility" />
+            <converters:HideFileOrchestrationSourceConverter x:Key="HideFileOrchestrationSource" />
             <FontFamily x:Key="KioskClientFonts">/Resources/KioskClient.ttf#KioskClient</FontFamily>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
