--- a/src/KioskClient/App.xaml
+++ b/src/KioskClient/App.xaml
@@ -15,6 +15,8 @@
 
     <Application.Resources>
         <ResourceDictionary>
+            <converters:ComboBoxItemConverter x:Key="ComboBoxItem" />
+            <converters:ComboBoxItemsConverter x:Key="ComboBoxItems" />
             <converters:InvertBooleanConverter x:Key="InvertBoolean" />
             <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
             <converters:BooleanToInvertedVisibilityConverter x:Key="BooleanToInvertedVisibility" />
