--- a/src/KioskClient/Pages/Actions/WebsitePage.xaml
+++ b/src/KioskClient/Pages/Actions/WebsitePage.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:KioskLibrary.Actions"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:wpfControls="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -17,7 +18,9 @@
             <TextBlock x:Name="TextBlock_ConnectionError" Style="{StaticResource HeaderTextBlockStyle}" Text="Unable to reach the website..." HorizontalAlignment="Center" />
             <TextBlock x:Name="TextBlock_ConnectionErrorMessage" Style="{StaticResource SubheaderTextBlockStyle}" Text="{x:Bind Path=State.FailedToLoadContentMessageDetail}" HorizontalAlignment="Center" />
         </StackPanel>
-        <WebView x:Name="Webview_Display" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Canvas.ZIndex="0" Visibility="{x:Bind Path=State.ShowContentControl, Converter={StaticResource BooleanToVisibility}, Mode=OneWay}"/>
+        <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Canvas.ZIndex="0" Visibility="{x:Bind Path=State.ShowContentControl, Converter={StaticResource BooleanToVisibility}, Mode=OneWay}">
+            <wpfControls:WebView2 x:Name="Webview_Display"/>
+        </Border>
         <Button x:Name="Button_Settings" Background="Black" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,20,20" Canvas.ZIndex="1" Click="Button_Settings_Click" Opacity=".5">
             <Button.Content>
                 <StackPanel Orientation="Horizontal">
